# py-acr122u

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Containerfile  devcontainer.json
Example/: write_and_read.py
src/py_acr122u/: __init__.py  __main__.py  error.py  nfc.py  option.py
